<resources>
    <string name="app_name">TareApp</string>
    <string name="logo">Logo</string>
    <string name="tareapp">TareApp</string>
    <string name="filtros">Filtros</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="registrar">Registrar</string>
    <string name="email">Email</string>
    <string name="email_registro">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="contrase_a_registro">Contraseña</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="iniciar_sesi_n_inicio">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="mensaje_resultado">Mensaje resultado</string>
    <string name="inicio_de_sesi_n">Inicio de sesión</string>
    <string name="mensaje_resultado_registro">Mensaje resultado</string>
    <string name="crear_tarea">Crear tarea</string>
    <string name="descripci_n">Descripción</string>
    <string name="t_tulo_tarea">Título tarea</string>
    <string name="t_tulo_lista">Título lista</string>
    <string name="cambiar_email">Cambiar email</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="borrar_cuenta">Borrar cuenta</string>
</resources>