<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_claro"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/idTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/inicio_de_sesi_n"
            android:textAlignment="center"
            android:textColor="@color/negro"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_formulario"
            android:gravity="center"
            android:minWidth="350dp"
            android:orientation="vertical">

            <!-- Pestañas -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/idBotonIniciarSesion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/boton_izquierdo_redondo"
                    android:padding="12dp"
                    android:text="@string/iniciar_sesi_n_inicio"
                    android:textAlignment="center"
                    android:textColor="@color/blanco"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/idBotonRegistrar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:text="@string/registrarse"
                    android:textAlignment="center"
                    android:textColor="@color/negro" />
            </LinearLayout>

            <!-- Formulario INICIAR SESIÓN -->
            <LinearLayout
                android:id="@+id/layoutLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/idInputEmailInicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/idInputContraseniaInicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/contrase_a"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    tools:ignore="Autofill,TextContrastCheck" />

                <Button
                    android:id="@+id/idBotonEnviarInicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/amarillo"
                    android:text="@string/iniciar_sesi_n"
                    android:textColor="@color/negro"
                    tools:ignore="DuplicateSpeakableTextCheck" />

            </LinearLayout>

            <!-- Formulario REGISTRO -->
            <LinearLayout
                android:id="@+id/layoutRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/idInputEmailRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:hint="@string/email_registro"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/idInputContraseniaRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/contrase_a_registro"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/idInputRepetirContraseniaInicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/repetir_contrase_a"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    tools:ignore="Autofill" />

                <Button
                    android:id="@+id/idBotonEnviarRegistro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/amarillo"
                    android:text="@string/registrar"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <TextView
                android:id="@+id/idMensajeResultadoInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:textColor="@color/negro" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
