<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gris_claro"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/idTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="Ajustes de la cuenta"
        android:textAlignment="center"
        android:textColor="@color/negro"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blanco_claro"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idLabelEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email:"
                android:textColor="@color/negro"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/idEmailCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="email"
                android:textColor="@color/azul_oscuro"
                android:textSize="20sp"
                tools:ignore="HardcodedText,InefficientWeight,RtlHardcoded" />
        </LinearLayout>

        <Button
            android:id="@+id/idBotonCambiarEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/amarillo"
            android:text="@string/cambiar_email"
            android:textColor="@color/negro"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/idBotonCambiarContrasenia"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/amarillo"
            android:text="@string/cambiar_contrase_a"
            android:textColor="@color/negro"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/idBotonBorrarCuenta"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/rojo"
            android:text="@string/borrar_cuenta"
            android:textColor="@color/negro"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </LinearLayout>

</LinearLayout>
